# fatrace

./: CMakeLists.txt
src/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt  fatrace_backend.c  sample.c
src/lib/includes/: fatrace_backend.h  sample.h
tests/: CMakeLists.txt  test_sample.c
